--- a/resources/src/sass/_type.scss
+++ b/resources/src/sass/_type.scss
@@ -79,7 +79,7 @@ body {
 
 .pfre-info--show {
     position: absolute;
-    transform: translate(50%,-45%);
+    transform: translate(35%,-45%);
     background: $light-gray;
     border-radius: 15px;
     float: right;
